eks-installations/internetGateway.tf
resource "aws_internet_gateway" "my_igw" {
  vpc_id = aws_vpc.my_vpc.id

  tags = {
    Name = "${terraform.workspace}-IG"
  }
}
